fixed spacing on add expense button and removed scrollbar at 640px

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,17 @@ body {
   overflow: hidden;
 }
 
+@media only screen and (max-width: 640px) {
+  body {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  ::-webkit-scrollbar {
+    display: none; /* Safari & Google Chrome */
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
